@@ -31,6 +31,7 @@ AX_LIBRARY_NET
 AX_ARG_OPENSSL
 AX_ARG_ENABLE_ASSERT
 AX_ARG_ENABLE_WARNINGS
+AX_ARG_ENABLE_EFENCE
 
 AC_CHECK_FUNCS(strlcpy strlcat)
 
